[Vimode] Do not remove empty lines when reformatting

In vimode, "gqap" also selects empty lines. As an implementation detail,
we use joinLines() which happily gobbles up empty lines.

BUG: 340550